# DopDocAI

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: arc-smoke.yaml  docker-publish.yaml  fatass-build.yaml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/services/: llm_service.py
backend/app/utils/: clone_remote_repo.py  url_converter.py
backend/auth_service/: Dockerfile  go.mod  go.sum
backend/auth_service/cmd/: main.go
backend/auth_service/internal/config/: config.go
backend/auth_service/internal/conifg/: config.go
backend/auth_service/internal/handlers/: auth.go  health.go  users.go
backend/auth_service/internal/models/: app.go  users.go
backend/auth_service/internal/repository/: pgxrepo.go
backend/auth_service/internal/server/: routes.go  server.go
backend/auth_service/internal/services/: auth_setvice.go
backend/chats_service/: Dockerfile  Dockerfile.dev
backend/chats_service/alembic/: env.py
backend/chats_service/alembic/versions/: a8f8acca8421_init_tables.py
backend/chats_service/app/: main.py
backend/chats_service/app/api/: deps.py
backend/chats_service/app/api/routes/: chats.py
backend/chats_service/app/clients/: ingestion_service.py  repos_service.py
backend/chats_service/app/core/: config.py
backend/chats_service/app/db/: models.py  session.py
backend/chats_service/app/repositories/: chats.py  messages.py
backend/chats_service/app/services/: chat_service.py  llm_service.py
backend/ingestion_service/: Dockerfile  Dockerfile.dev  main.py  pipeline.py  pyproject.toml  routes.py
backend/ingestion_service/alembic/: env.py
backend/ingestion_service/alembic/versions/: e227efc36393_init_tables.py
backend/ingestion_service/app/: main.py
backend/ingestion_service/app/api/: deps.py  deps_db.py  models.py
backend/ingestion_service/app/api/routes/: ingest.py  rag.py
backend/ingestion_service/app/core/: config.py
backend/ingestion_service/app/domain/: models.py
backend/ingestion_service/app/infra/: db.py  git_client.py  models.py  qdrant_client.py  repos_client.py  repositories.py  treesitter_client.py
backend/ingestion_service/app/pipeline/: embedder.py  processor.py  traversal.py
backend/ingestion_service/app/services/: ingest_service.py
backend/ingestion_service/models/: repo_ingest_request_response.py
backend/repos_service/: Dockerfile  pyproject.toml
backend/repos_service/alembic/: env.py
backend/repos_service/alembic/versions/: db86ee148162_init_tables.py
backend/repos_service/app/: main.py
backend/repos_service/app/api/: deps.py
backend/repos_service/app/api/routes/: repo_index_states.py  repos.py
backend/repos_service/app/core/: config.py
backend/repos_service/app/db/: models.py
backend/repos_service/app/db/repository/: repo_index_states.py  repos.py
backend/repos_service/app/schemas/: repo_index_states.py  repos.py
backend/repos_service/app/services/: repo_index_service.py  repos_service.py
db-init/: 01-create-multiple-dbs.sql  02-auth-db.sql
frontend/: package-lock.json  package.json  tsconfig.base.json
frontend/host/: package.json  vite.config.ts  vite.config.ts.timestamp-1768145998726-71a1b874a0e8c.mjs
frontend/host/src/: main.tsx  remotes.d.ts
frontend/mf-chat/: package.json  vite.config.ts
frontend/mf-chat/src/: main.tsx
frontend/mf-repos/: index.html  package.json  vite.config.ts
frontend/mf-repos/src/: env.d.ts
frontend/shared/: package.json  tsconfig.json
frontend/shared/src/: index.ts
frontend/src/: App.tsx
frontend/src/api/: clients.ts
frontend/src/components/: ChatView.tsx  Layout.tsx  MessageInput.tsx  MessageList.tsx  RepoIndexForm.tsx  RepoList.tsx  SourcesAccordion.tsx  StatusBadge.tsx
frontend/src/hooks/: useChat.ts  useRepos.ts
src/ingestion-service/: docker-compose.yml  main.py  qdrant.py  requirements.txt  treesitter.py
src/ingestion_service/: docker-compose.yml  pipeline.py
(+35 files in other folders)
