[tool.poetry]
name = "dopdocai"
version = "0.1.0"
description = "DopDocAI monorepo (microservices)"
authors = ["DopDocAI Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# --- shared baseline for all services ---
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }

pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"

httpx = "^0.27.0"

# --- DB stack (used by repos/chats; harmless if installed globally, but we keep it in groups) ---
# (intentionally NOT in main deps to keep "main" light; DB deps go into groups)

[tool.poetry.group.repos.dependencies]
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
psycopg = { version = "^3.2.3", extras = ["binary"] }

[tool.poetry.group.chats.dependencies]
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
psycopg = { version = "^3.2.3", extras = ["binary"] }

[tool.poetry.group.ingest.dependencies]
gitpython = "^3.1.43"
qdrant-client = "^1.11.0"

numpy = "^2.0.0"
torch = "^2.4.0"
transformers = "^4.44.0"
sentence-transformers = "^3.0.1"

tree-sitter = "0.25.2"
tree-sitter-go = "^0.25.0"
#tree-sitter-html = "^0.23.0"
#tree-sitter-json = "^0.21.0"
#tree-sitter-yaml = "^0.6.0"
#tree-sitter-toml = "^0.6.0"
#tree-sitter-markdown = "^0.3.2"
#tree-sitter-css = "^0.21.0"
#tree-sitter-dockerfile = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
